--- a/HCommAir/HCommAir.csproj
+++ b/HCommAir/HCommAir.csproj
@@ -11,9 +11,9 @@
     <PackageTags>C#, .Net Standard 2.0, Wireless</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/KyungtackKim/HCommAir.git</PackageProjectUrl>
-    <AssemblyVersion>1.0.9.0</AssemblyVersion>
-    <FileVersion>1.0.9.0</FileVersion>
-    <Version>1.0.9.0</Version>
+    <AssemblyVersion>1.0.9.1</AssemblyVersion>
+    <FileVersion>1.0.9.1</FileVersion>
+    <Version>1.0.9.1-alpha.7</Version>
   </PropertyGroup>
 
   <ItemGroup>
